# simple-rpg-game

./: README.md
RPGGameConsole/: build.sh  main.cpp
RPGGameConsole/include/: BattleManager.h  ConsoleManager.h  Entity.h  GameManager.h  InputManager.h  Mob.h  Player.h  Utility.h
RPGGameConsole/src/: BattleManager.cpp  ConsoleManager.cpp  Entity.cpp  GameManager.cpp  InputManager.cpp  Mob.cpp  Player.cpp  Utility.cpp
RPGGameUI/: CMakeLists.txt  main.cpp  mainwindow.ui
RPGGameUI/include/: ConsoleManager.h  GameManager.h  Mob.h  Player.h  Utility.h  mainwindow.h
RPGGameUI/src/: ConsoleManager.cpp  Entity.cpp  GameManager.cpp  Mob.cpp  Player.cpp  Utility.cpp  mainwindow.cpp
